# aaax

./: .gitignore  .gitmodules  404.html  CNAME  MANIFEST.in  README.md  aaax.toml.example  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-monorepo.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
aaax/: __init__.py  __main__.py  _vendor.py  action_gate.py  bootstrap.py  boundary.py  capability.py  cli.py  cli_kernel.py  config.py  constellation.py  kernel.py  lifecycle.py  loader.py  models.py  module_loader.py  packages.py  policy.py  server.py  strategy.py
aaax/libos/: __init__.py  action_mixin.py  bridge.py  capability_mixin.py
aaax/protocols/: __init__.py  action.py  capability.py  lifecycle.py  module.py
aaax/tests/: conftest.py  test_action_gate.py  test_bootstrap.py  test_boundary.py  test_capability.py  test_cli.py  test_kernel.py  test_lifecycle.py  test_non_ps.py
architecture/: index.html
architecture/framework-boundaries/: index.html
architecture/kernel-functions/: index.html
architecture/overview/: index.html
composition/: index.html
composition/channels-services/: index.html
composition/psihub-packages/: index.html
composition/strategy-resources/: index.html
concepts/launch-boundary/: index.html
concepts/package-composition/: index.html
concepts/strategies/: index.html
core/: index.html
core/config/: index.html
core/governance/: index.html
core/libos/: index.html
core/modules/: index.html
docs/: CNAME  design-note.md  getting-started.md  index.md
docs/architecture/: framework-boundaries.md  index.md  kernel-functions.md  overview.md  productive-suite.md
docs/composition/: channels-services.md  index.md  psihub-packages.md  strategy-resources.md
docs/concepts/: launch-boundary.md  package-composition.md  strategies.md
docs/core/: config.md  governance.md  index.md  libos.md  modules.md
docs/launch/: agent-handoff.md  cli-shell.md  fastapi-surface.md  index.md
docs/reference/: api.md  cli.md  http-api.md  python-api.md
docs/stylesheets/: custom.20260629.css  custom.css
docs/tutorials/: 01-first-kernel.md  02-expose-public-channels.md  channel-events.md  compose-packages.md  index.md  serve-package.md  tactic-endpoint.md
examples/: README.md
examples/capability-roundtrip/: README.md  run_demo.py
examples/minimal-kernel/: README.md  aaax.toml  run_once.py
examples/public-channels/: README.md  aaax.toml  run_server.py
getting-started/: index.html
launch/: index.html
launch/agent-handoff/: index.html
launch/cli-shell/: index.html
launch/fastapi-surface/: index.html
notes/: aaax-kernel-note.md  implementation-plan.md  productive-suite-note.md
reference/api/: index.html
reference/cli/: index.html
reference/http-api/: index.html
reference/python-api/: index.html
search/: search_index.json
tests/: test_docs_rendering.py  test_sdist_contents.py  test_strategy.py
tutorials/: index.html
tutorials/01-first-kernel/: index.html
tutorials/02-expose-public-channels/: index.html
tutorials/channel-events/: index.html
tutorials/compose-packages/: index.html
tutorials/serve-package/: index.html
tutorials/tactic-endpoint/: index.html
