[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaax"
version = "0.0.1"
description = "Advanced Autonomous Agentic ICS (Information and Computing Services) kernel"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Junyan Cheng" }]
keywords = [
    "agents",
    "agentic systems",
    "multi-agent",
    "governance",
    "kernel",
    "sssn",
    "lllm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "lllm-core>=0.1.1",
    "pydantic>=2.0",
    "sssn>=0.0.1",
    "tomli>=2.0.1; python_version < \"3.11\"",
]

[project.urls]
Homepage = "https://aaax.one"
Documentation = "https://aaax.one"
Repository = "https://github.com/Productive-Superintelligence/aaax"
Issues = "https://github.com/Productive-Superintelligence/aaax/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "twine>=5.1.1",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-autorefs>=1.0,<2.0",
    "mkdocs-material>=9.7,<10.0",
    "mkdocstrings[python]>=0.26,<2.0",
    "pymdown-extensions>=10.0,<11.0",
]

[project.scripts]
aaax = "aaax.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aaax*"]
exclude = ["aaax.tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["aaax/tests"]
