[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaax"
version = "0.2.0a0"
description = "Strategy layer for composing PSI tactics, channels, and services."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Junyan Cheng" }]
keywords = [
  "agents",
  "agentic systems",
  "strategy",
  "fastapi",
  "sssn",
  "lllm",
  "psihub",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
integrations = [
  "lllm-core>=0.2.0",
  "psihub>=0.0.1",
  "sssn>=0.1.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.8",
]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "lllm-core>=0.2.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "psihub>=0.0.1",
  "pymdown-extensions>=10.8",
  "pytest>=8.0",
  "sssn>=0.1.0",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://aaax.one"
Documentation = "https://aaax.one"
Repository = "https://github.com/Productive-Superintelligence/aaax"
Issues = "https://github.com/Productive-Superintelligence/aaax/issues"

[project.scripts]
aaax = "aaax.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aaax*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
aaax = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
